name:                cmark
version:             0.5.5
synopsis:            Fast, accurate CommonMark (Markdown) parser and renderer
description:
  This package provides Haskell bindings for
  <https://github.com/jgm/cmark libcmark>, the reference
  parser for <http://commonmark.org CommonMark>, a fully
  specified variant of Markdown. It includes sources for
  libcmark (0.27.1) and does not require prior installation of the
  C library.

homepage:            https://github.com/jgm/cmark-hs
license:             BSD3
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           (C) 2015 John MacFarlane
category:            Text
tested-with:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.2, GHC == 7.10.3
build-type:          Simple
extra-source-files:  README.md
                     changelog
                     cbits/*.h
                     extensions/*.h
                     cbits/case_fold_switch.inc
                     cbits/entities.inc
                     bench/sample.md
                     bench/full-sample.md
cabal-version:       >=1.14

Source-repository head
  type:              git
  location:          git://github.com/jgm/cmark-hs.git

flag pkgconfig
  default:     False
  description: Use system libcmark via pkgconfig

library
  exposed-modules:     CMark
  build-depends:       base >=4.5 && < 5.0,
                       text >= 1.0 && < 1.3,
                       bytestring
  if impl(ghc < 7.6)
    build-depends:     ghc-prim >= 0.2
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
  if flag(pkgconfig)
    pkgconfig-depends: libcmark
  else
    cc-options:        -Wall -std=c99
    Include-dirs:      cbits, extensions
    Includes:          cmark.h, cmark_extension_api.h, cmark_version.h,
                       cmark_export.h, core-extensions.h
    c-sources:
                       cbits/arena.c
                       cbits/blocks.c
                       cbits/buffer.c
                       cbits/cmark.c
                       cbits/cmark_ctype.c
                       cbits/commonmark.c
                       cbits/houdini_href_e.c
                       cbits/houdini_html_e.c
                       cbits/houdini_html_u.c
                       cbits/html.c
                       cbits/inlines.c
                       cbits/iterator.c
                       cbits/latex.c
                       cbits/linked_list.c
                       cbits/man.c
                       cbits/node.c
                       cbits/plugin.c
                       cbits/references.c
                       cbits/registry.c
                       cbits/render.c
                       cbits/scanners.c
                       cbits/syntax_extension.c
                       cbits/utf8.c
                       cbits/xml.c
                       extensions/autolink.c
                       extensions/core-extensions.c
                       extensions/ext_scanners.c
                       extensions/strikethrough.c
                       extensions/table.c
                       extensions/tagfilter.c

benchmark bench-cmark
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          bench-cmark.hs
  build-depends:    base, text, cmark, criterion,
                    sundown >= 0.6 && < 0.7,
                    cheapskate >= 0.1 && < 0.2,
                    markdown >= 0.1 && < 0.2,
                    discount >= 0.1 && < 0.2,
                    blaze-html >= 0.7 && < 0.10
  ghc-options:      -O2
  default-language: Haskell2010

Test-Suite test-cmark
  type:           exitcode-stdio-1.0
  main-is:        test-cmark.hs
  hs-source-dirs: test
  build-depends:  base, cmark, text, HUnit >= 1.2 && < 1.6
  ghc-options:    -Wall -fno-warn-unused-do-bind -threaded
  default-language: Haskell98
